# vigir_teleop_planning_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: CartesianMotionRequest.msg  CircularMotionRequest.msg  JointPositionConstraints.msg  PlanRequest.msg  PlanToJointTargetRequest.msg  PlannerConfiguration.msg  TargetConfigIkRequest.msg
srv/: GetMotionPlanForCartesianWaypoints.srv  GetMotionPlanForCircularMotion.srv  GetMotionPlanForJoints.srv  GetMotionPlanForPose.srv
