<?xml version="1.0"?>
<package>
  <name>vigir_teleop_planning_msgs</name>
  <version>0.0.0</version>
  <description>The vigir_teleop_planning_msgs package provides ROS message and service types for planning robot motions. The messages are compact to facilitate transmission over restricted communication links.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
